# CRFM

./: $PROFILE.txt  .firebaserc  .gitignore  CLAUDE.md  Launcher.bat  Modelfile  PENDING.md  README.md  TUNING.md  assets  firebase.json  firestore - copia.rules  firestore.indexes.json  firestore.rules  index.html  nuevo-equipo.json  package-lock.json  package.json  scratch_pdf_parser.py  vars.txt  vite.config.ts  wiki-tree.json
.agents/: AGENTS.md
.claude/: settings.local.json
.codex/: hooks.json
assets/: index-6eFLa7Fk.js  index-BQrAjesA.css
docs/: campaign-operations.md  index.md  techmanual.md  total-warfare.md
extraccion_equipo/: A Time of War- Companion_equipment.json  A Time of War_equipment.json  Destiny_equipment.json  Mechwarrior 1 The Battletech Rpg Game_equipment.json  Mechwarrior 2 The Battletech Rpg Game_equipment.json  Mechwarrior 3 LostTech The Battletech Rpg Game_equipment.json  Mechwarrior 3 The Battletech Rpg Game_equipment.json  extract_equipment.py  generate_master.py  generate_report.py  informe_comparativo.md  informe_comparativo_conflictos.md  resolve_conflicts.py
functions/: package-lock.json
scripts/: audit-weapon-coverage.cjs  backup-firestore.ts  backup.bat  build-weapons-master.ts  build_dictionary.py  build_from_ssw.ts  deploy-firebase.bat  deploy.bat  local.bat  migrate-sheets-to-firestore.ts  migrate_to_json.ts  regenerate_master.ts  set-role.ts  sync-solaris.bat  sync-solaris.cjs
src/: App - copia.tsx  App.tsx  index.css  main.tsx  version.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
(+1531 files in other folders)
