[package]
name = "launcher-app"
version = "0.1.0"
description = "King Karl Launcher"
authors = ["Markirov"]
edition = "2021"

[lib]
name = "launcher_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5"
walkdir = "2.5.0"
regex = "1.12.4"
